# GROVE-Tool-Icon-Studio

./: .gitignore  .prettierignore  DEPLOYMENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  run-tauri.sh  tsconfig.node.json  vite.config.d.ts  vite.config.js  vite.config.ts
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: audit-weekly.yml  ci.yml  release.yml
dev docs/: Gemini-_11.md
openspec/: config.yaml
openspec/changes/app-decomposition/: design.md
openspec/specs/: layout-window-sizing.md  preview-performance.md
sdd/layout-preview-perf-fixes/: exploration.md
sdd/store-migration-tests-polish/: explore.md
src/: App.css  App.tsx  BatchPanel.tsx  ErrorBoundary.tsx  HsbPanel.tsx  ImageCropper.tsx  InstallPanel.tsx  StatePreview.tsx  api.ts  cropper-math.ts  main.tsx  validation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_processor.rs  installer.rs  lib.rs  main.rs  path_detector.rs
src/__tests__/: App-Batch.test.tsx  App-HSB.test.tsx  App.test.tsx  BatchPanel.test.tsx  ErrorBoundary.test.tsx  HsbPanel.test.tsx  ImageCropper.test.tsx  InstallPanel.test.tsx  StatePreview.test.tsx  api.test.ts  cropper-math.test.ts
src/hooks/: useBatchProcessing.ts  useDebounce.ts  useHsbAdjustments.ts  useIconInstall.ts  useIconPreview.ts  useIconProcessing.ts  useLocalStorage.ts  useReaperPath.ts
src/sections/: GenerateSection.tsx  HeaderSection.tsx  HsbSection.tsx  InstallSection.tsx  PreviewSection.tsx  ReaperPathSection.tsx  SourceSection.tsx
(+103 files in other folders)
