[package]
name = "grove-tool-icon-studio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
thiserror = "1"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
